--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Daniel Ashton's Projects
 description: A page to display and categorise projects by me.
-[LinkedIn](www.linkedin.com/in/danieljashton/).
+url: https://www.linkedin.com/in/danieljashton/
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
