--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
-
+baseurl: 'http://daniel-ashton.github.io
 # Permalinks
 permalink:        pretty
 relative_permalinks: true
