--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter:      pygments
 baseurl: 'http://daniel-ashton.github.io/'
 # Permalinks
 permalink:        pretty
-relative_permalinks: true
+relative_permalinks: false
 
 # Setup
 title:            Hyde
