--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
-baseurl: 'http://daniel-ashton.github.io/'
+
 # Permalinks
 permalink:        pretty
 relative_permalinks: false
@@ -10,8 +10,8 @@ relative_permalinks: false
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
-baseurl:          /
+url:              'http://daniel-ashton.github.io/'
+baseurl:          'http://daniel-ashton.github.io/'
 
 author:
   name:           'Mark Otto'
