--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ markdown:         kramdown
 highlighter:      rouge
 
 # Setup
-title:            Hydeout
-tagline:          'A Jekyll theme'
-description:      'The <a href="http://hyde.getpoole.com" target="_blank">Hyde</a> theme for <a href="http://jekyllrb.com" target="_blank">Jekyll</a>, refreshed.'
+title:            Daniel Ashton
+tagline:          'A project website'
+description:      'This website is to document my personal projects'
 url:              https://fongandrew.github.io
 baseurl:          '/'
                   # the optional subpath of your site, e.g. "/blog"
@@ -15,8 +15,7 @@ baseurl:          '/'
                   # sidebar_blog_link below.
 remote_theme: fongandrew/hydeout
 author:
-  name:           'Andrew Fong'
-  url:            https://twitter.com/fongandrewc
+  name:           'Daniel Ashton'
 
 paginate:         5
 # paginate_path:    '/page:num'
@@ -60,4 +59,4 @@ google_analytics: UA-100461102-1
 # own fork.
 hydeout:
   version:          4.2.0
-  repo:             https://github.com/fongandrew/hydeout
+  repo:             https://github.com/Daniel-Ashton
